# slurm

./: NEWS  configure.ac
doc/man/man1/: scontrol.1  sinfo.1
slurm/: slurm.h.in
src/common/: slurm_protocol_defs.h  slurm_protocol_pack.c
src/layouts/power/: cpufreq.c
src/plugins/power/: Makefile.am
src/plugins/power/arm/: Makefile.am  power_arm.c
src/plugins/select/cons_res/: select_cons_res.c
src/slurmctld/: controller.c  node_mgr.c  powercapping.c  powercapping.h  proc_req.c
